--- a/app/src/main/res/layout/game_table_seats_fragment.xml
+++ b/app/src/main/res/layout/game_table_seats_fragment.xml
@@ -21,9 +21,9 @@
     tools:background="@android:color/white">
 
     <View
-        android:id="@+id/vCenterView"
-        android:layout_width="@dimen/triple_standard_margin"
-        android:layout_height="@dimen/triple_standard_margin"
+        android:id="@+id/vTableSeatsCenterView"
+        android:layout_width="@dimen/third_standard_margin"
+        android:layout_height="@dimen/third_standard_margin"
         android:layout_centerInParent="true" />
 
     <include
@@ -31,7 +31,7 @@
         layout="@layout/game_table_seat_east"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/vCenterView"
+        android:layout_below="@+id/vTableSeatsCenterView"
         android:layout_centerHorizontal="true" />
 
     <include
@@ -40,14 +40,15 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
-        android:layout_toEndOf="@+id/vCenterView" />
+        android:layout_toRightOf="@+id/vTableSeatsCenterView"
+        tools:ignore="RtlHardcoded" />
 
     <include
         android:id="@+id/iGameTableSeatWest"
         layout="@layout/game_table_seat_west"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/vCenterView"
+        android:layout_above="@+id/vTableSeatsCenterView"
         android:layout_centerHorizontal="true" />
 
     <include
@@ -56,6 +57,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
-        android:layout_toStartOf="@+id/vCenterView" />
+        android:layout_toLeftOf="@+id/vTableSeatsCenterView"
+        tools:ignore="RtlHardcoded" />
 
 </RelativeLayout>
