--- a/app/src/main/res/drawable/layer_mm_logo.xml
+++ b/app/src/main/res/drawable/layer_mm_logo.xml
@@ -16,7 +16,7 @@
 -->
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
-        <color android:color="@android:color/white" />
+        <color android:color="@color/white" />
     </item>
     <item>
         <bitmap
