--- a/app/src/main/res/layout/game_points_dialog_fragment.xml
+++ b/app/src/main/res/layout/game_points_dialog_fragment.xml
@@ -18,7 +18,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:background="@android:color/white"
+    android:background="@color/white"
     android:orientation="vertical"
     android:padding="@dimen/standard_margin"
     tools:ignore="Overdraw">
