--- a/app/src/main/res/layout/game_table_ranking_dialog_fragment.xml
+++ b/app/src/main/res/layout/game_table_ranking_dialog_fragment.xml
@@ -18,7 +18,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:background="@android:color/white"
+    android:background="@color/white"
     tools:ignore="Overdraw">
 
     <TableLayout
