--- a/app/src/main/res/layout/main_oldgame_item.xml
+++ b/app/src/main/res/layout/main_oldgame_item.xml
@@ -24,7 +24,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_margin="@dimen/half_standard_margin"
-        card_view:cardBackgroundColor="@android:color/white"
+        card_view:cardBackgroundColor="@color/white"
         card_view:cardCornerRadius="@dimen/cardCornerRadius">
 
         <RelativeLayout
@@ -47,7 +47,7 @@
                     android:layout_alignParentStart="true"
                     android:layout_marginStart="@dimen/standard_margin"
                     android:gravity="center_vertical"
-                    android:textColor="@android:color/white"
+                    android:textColor="@color/white"
                     android:textStyle="bold"
                     tools:text="04/29/2017 12:30" />
 
@@ -59,7 +59,7 @@
                     android:layout_marginEnd="@dimen/standard_margin"
                     android:layout_toEndOf="@+id/tvOldGameItemStartDate"
                     android:gravity="center_vertical|end"
-                    android:textColor="@android:color/white"
+                    android:textColor="@color/white"
                     android:textStyle="bold"
                     tools:text="04/29/2017 14:30" />
 
