--- a/app/src/main/res/layout/main_oldgames_fragment.xml
+++ b/app/src/main/res/layout/main_oldgames_fragment.xml
@@ -19,7 +19,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/white"
+    android:background="@color/white"
     tools:context=".app.main.old_games.OldGamesFragment"
     tools:ignore="Overdraw">
 
@@ -66,7 +66,7 @@
                 android:id="@+id/emptyLayoutOldGames"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@android:color/white"
+                android:background="@color/white"
                 android:clickable="true"
                 android:focusable="true"
                 android:gravity="center"
