--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -22,7 +22,7 @@
 
     <style name="AlertDialogStyleMM" parent="Theme.AppCompat.Light.Dialog.Alert">
         <item name="android:textColorPrimary">@color/grayMM</item>
-        <item name="android:background">@android:color/white</item>
+        <item name="android:background">@color/white</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
@@ -81,7 +81,7 @@
         <item name="android:layout_width">64dp</item>
         <item name="android:layout_height">48dp</item>
         <item name="android:textStyle">bold</item>
-        <item name="android:textColor">@android:color/white</item>
+        <item name="android:textColor">@color/white</item>
         <item name="android:textSize">20sp</item>
     </style>
 
