--- a/app/src/main/res/layout/game_discarder_dialog_fragment.xml
+++ b/app/src/main/res/layout/game_discarder_dialog_fragment.xml
@@ -37,8 +37,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:gravity="center"
-        android:layout_marginBottom="@dimen/standard_margin" />
+        android:layout_marginBottom="@dimen/standard_margin"
+        android:gravity="center" />
 
     <RelativeLayout
         android:layout_width="wrap_content"
