--- a/app/src/main/res/layout/game_table_seat_north.xml
+++ b/app/src/main/res/layout/game_table_seat_north.xml
@@ -59,12 +59,21 @@
         android:layout_below="@+id/ivTableSeatNorthSeatWindIcon"
         android:layout_toStartOf="@+id/tvTableSeatNorthPoints" />
 
-    <View
-        android:id="@+id/vGameTableSeatNorthAuxEnd"
-        style="@style/auxView"
+    <LinearLayout
+        android:id="@+id/llGameTableSeatNorthAuxEnd"
+        style="@style/diffsView"
         android:layout_above="@+id/tvTableSeatNorthName"
         android:layout_below="@+id/ivTableSeatNorthSeatWindIcon"
-        android:layout_toEndOf="@+id/tvTableSeatNorthPoints" />
+        android:layout_toEndOf="@+id/tvTableSeatNorthPoints"
+        android:orientation="vertical"
+        android:paddingStart="@dimen/quarter_standard_margin"
+        tools:ignore="RtlSymmetry">
+
+        <include
+            android:id="@+id/iGameTableSeatNorthDiffs"
+            layout="@layout/game_table_seat_diffs" />
+
+    </LinearLayout>
 
     <TextView
         android:id="@+id/tvTableSeatNorthName"
