--- a/app/src/main/res/layout/game_table_seat_south.xml
+++ b/app/src/main/res/layout/game_table_seat_south.xml
@@ -59,12 +59,22 @@
         android:layout_below="@+id/ivTableSeatSouthSeatWindIcon"
         android:layout_toStartOf="@+id/tvTableSeatSouthPoints" />
 
-    <View
-        android:id="@+id/vGameTableSeatSouthAuxEnd"
-        style="@style/auxView"
+    <LinearLayout
+        android:id="@+id/llGameTableSeatSouthAuxEnd"
+        style="@style/diffsView"
         android:layout_above="@+id/tvTableSeatSouthName"
         android:layout_below="@+id/ivTableSeatSouthSeatWindIcon"
-        android:layout_toEndOf="@+id/tvTableSeatSouthPoints" />
+        android:layout_toEndOf="@+id/tvTableSeatSouthPoints"
+        android:orientation="vertical"
+        android:paddingStart="@dimen/quarter_standard_margin"
+        tools:ignore="RtlSymmetry">
+
+        <include
+            android:id="@+id/iGameTableSeatSouthDiffs"
+            layout="@layout/game_table_seat_diffs" />
+
+    </LinearLayout>
+
 
     <TextView
         android:id="@+id/tvTableSeatSouthName"
