--- a/app/src/main/res/layout/game_table_seat_west.xml
+++ b/app/src/main/res/layout/game_table_seat_west.xml
@@ -59,12 +59,22 @@
         android:layout_below="@+id/ivTableSeatWestSeatWindIcon"
         android:layout_toStartOf="@+id/tvTableSeatWestPoints" />
 
-    <View
-        android:id="@+id/vGameTableSeatWestAuxEnd"
+    <LinearLayout
+        android:id="@+id/llGameTableSeatWestAuxEnd"
         style="@style/auxView"
         android:layout_above="@+id/tvTableSeatWestName"
         android:layout_below="@+id/ivTableSeatWestSeatWindIcon"
-        android:layout_toEndOf="@+id/tvTableSeatWestPoints" />
+        android:layout_toEndOf="@+id/tvTableSeatWestPoints"
+        android:orientation="vertical"
+        android:paddingStart="@dimen/quarter_standard_margin"
+        tools:ignore="RtlSymmetry">
+
+        <include
+            android:id="@+id/iGameTableSeatWestDiffs"
+            layout="@layout/game_table_seat_diffs" />
+
+    </LinearLayout>
+
 
     <TextView
         android:id="@+id/tvTableSeatWestName"
