--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -20,6 +20,7 @@
     <dimen name="quarter_standard_margin">4dp</dimen>
     <dimen name="half_standard_margin">8dp</dimen>
     <dimen name="standard_margin">16dp</dimen>
+    <dimen name="standard_and_quarter_margin">24dp</dimen>
     <dimen name="standard_and_half_margin">24dp</dimen>
     <dimen name="second_standard_margin">32dp</dimen>
     <dimen name="third_standard_margin">48dp</dimen>
