--- a/app/src/main/res/layout/game_table_seat_east.xml
+++ b/app/src/main/res/layout/game_table_seat_east.xml
@@ -60,22 +60,13 @@
         android:layout_centerHorizontal="true"
         android:layout_toStartOf="@+id/tvTableSeatEastPoints" />
 
-    <LinearLayout
-        android:id="@+id/llGameTableSeatEastAuxEnd"
-        style="@style/diffsView"
+    <View
+        android:id="@+id/vGameTableSeatEastAuxEnd"
+        style="@style/auxView"
         android:layout_above="@+id/tvTableSeatEastName"
         android:layout_below="@+id/ivTableSeatEastSeatWindIcon"
         android:layout_centerHorizontal="true"
-        android:layout_toEndOf="@+id/tvTableSeatEastPoints"
-        android:orientation="vertical"
-        android:paddingStart="@dimen/quarter_standard_margin"
-        tools:ignore="RtlSymmetry">
-
-        <include
-            android:id="@+id/iGameTableSeatEastDiffs"
-            layout="@layout/game_table_seat_diffs" />
-
-    </LinearLayout>
+        android:layout_toEndOf="@+id/tvTableSeatEastPoints" />
 
 
     <TextView
@@ -87,5 +78,13 @@
         android:layout_centerHorizontal="true"
         android:ellipsize="end"
         tools:text="@string/player_name_placeholder" />
+
+    <include
+        android:id="@+id/iGameTableSeatEastDiffs"
+        layout="@layout/game_table_seat_diffs"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/tvTableSeatEastName" />
 
 </RelativeLayout>
