--- a/app/src/main/res/menu/game_menu.xml
+++ b/app/src/main/res/menu/game_menu.xml
@@ -14,14 +14,17 @@
     You should have received a copy of the GNU General Public License
     along with this program.  If not, see <https://www.gnu.org/licenses/>.
 -->
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
+<menu xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
         android:id="@+id/action_rotate_seats"
-        android:icon="@drawable/ic_rotate_90_degrees_ccw_black_24dp"
+        android:icon="@drawable/ic_rotation_down"
         android:title="@string/rotate_seats"
-        app:showAsAction="ifRoom" />
+        android:iconTint="@color/white"
+        app:showAsAction="ifRoom"
+        tools:targetApi="o" />
 
     <item
         android:id="@+id/action_combinations"
